@@ -1,3 +1,6 @@
+* Mon Jun 02 2003 <valery_reznic@users.sourceforge.net> 1.4.2-1
+- fixed problem with specspo (now I query package and not specspo information)
+
 * Mon Feb 03 2003 <gerbier@users.sourceforge.net> 1.4.1-1
 - add warning flag (-w/--warning) 
 
